add spring-cloud-starter-bootstrap to load configuration from consul kv store in bootstrap phrase and remove "spring.config.import=optional:consul:"

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -14,5 +14,5 @@ amqp.queue.gamification=gamification.queue
 
 # Shows declaration of exchanges, queues, bindings, etc.
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
-spring.config.import=optional:consul:
+#spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
