update to spring cloud 2025.0.0 and spring boot 3.5.0

--- a/gamification/src/main/resources/application.properties
+++ b/gamification/src/main/resources/application.properties
@@ -11,8 +11,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 amqp.exchange.attempts=attempts.topic
 amqp.queue.gamification=gamification.queue
-
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 # Shows declaration of exchanges, queues, bindings, etc.
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
 #spring.config.import=optional:consul:
 spring.cloud.compatibility-verifier.enabled=false
+
+#---
+spring.config.activate.on-profile=docker
+spring.rabbitmq.host=rabbitmq
