--- a/multiplication/src/main/resources/application.properties
+++ b/multiplication/src/main/resources/application.properties
@@ -12,7 +12,13 @@ spring.jpa.hibernate.ddl-auto=update
 service.gamification.host=http://localhost:8081
 
 amqp.exchange.attempts=attempts.topic
-
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 # Shows declaration of exchanges, queues, bindings, etc.
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
 #spring.config.import=optional:consul:
+
+#---
+spring.config.activate.on-profile=docker
+spring.rabbitmq.host=rabbitmq
