--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
     depends_on:
-      - rabbitmq-dev
-      - consul-importer
+      rabbitmq-dev:
+          condition: service_healthy
     networks:
       - microservices
   gamification:
@@ -21,8 +21,8 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
     depends_on:
-      - rabbitmq-dev
-      - consul-importer
+      rabbitmq-dev:
+          condition: service_healthy
     networks:
       - microservices
   gateway:
@@ -33,8 +33,8 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
     depends_on:
-      - rabbitmq-dev
-      - consul-importer
+      rabbitmq-dev:
+          condition: service_healthy
     networks:
       - microservices
   logs:
@@ -43,8 +43,8 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_CLOUD_CONSUL_HOST=consul
     depends_on:
-      - rabbitmq-dev
-      - consul-importer
+      rabbitmq-dev:
+          condition: service_healthy
     networks:
       - microservices
   consul-importer:
@@ -54,7 +54,7 @@ services:
     networks:
       - microservices
   consul-dev:
-    image: consul:1.15.4
+    image: hashicorp/consul:1.21.0
     container_name: consul
     ports:
       - '8500:8500'
@@ -63,13 +63,19 @@ services:
     networks:
       - microservices
   rabbitmq-dev:
-    image: rabbitmq:3.12.10-management
+    image: rabbitmq:4.1.0-management
     container_name: rabbitmq
     ports:
       - '5672:5672'
       - '15672:15672'
     networks:
       - microservices
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q status"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
 networks:
   microservices:
     driver: bridge
