--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -3,9 +3,10 @@ spring:
     consul:
       config:
         data-key: application.yml
-        prefix: config
         format: yaml
         default-context: defaults
+        prefixes:
+          - config
 logging:
   level:
     org.springframework.amqp.rabbit.connection.CachingConnectionFactory: WARN
