--- a/multiplication/Dockerfile
+++ b/multiplication/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:17
-COPY ./target/multiplication-0.0.1-SNAPSHOT.jar /usr/src/multiplication/ 
-WORKDIR /usr/src/multiplication
+COPY ./target/multiplication-0.0.1-SNAPSHOT.jar /usr/src/app/
+COPY ./opentelemetry-javaagent.jar /usr/src/app/
+
+WORKDIR /usr/src/app
+ENV JAVA_TOOL_OPTIONS=-javaagent:/usr/src/app/opentelemetry-javaagent.jar
+
 EXPOSE 8080
 CMD ["java", "-jar", "multiplication-0.0.1-SNAPSHOT.jar"]
